feat: add chatHandler docs
